# rebot

./: .gitignore  AGENTS.md  CLAUDE.md
lerobot/: .gitignore  README.md  environment.yml  pyproject.toml
lerobot/src/lerobot_robot_rebot/: __init__.py  camera.py  config.py  robot.py
lerobot/src/lerobot_robot_rebot/scripts/: __init__.py  check_dataset.py  deploy.py  download_models.py  record.py  train.py
lerobot/tests/: test_camera.py  test_check_dataset.py  test_deploy.py  test_record.py  test_robot.py
reBot-IsaacLab/: .gitignore  README.md  pyproject.toml  run.sh
reBot-IsaacLab/assets/: banana_physics.usda  rebotarm_lab.usda
reBot-IsaacLab/docs/: ISAACLAB_BANANA_GRASP_PROJECT整理.md
reBot-IsaacLab/scripts/: build_banana_asset.py  collect_isaacsim_teacher.py  evaluate_rgbd_policy.py  export_rgbd_policy.py  make_visual_report.py  real_rgbd_policy_dry_run.py  real_rgbd_policy_executor.py  train_rgbd_bc.py  train_rgbd_ppo.py  watch_rgbd_policy.py
reBot-IsaacLab/source/rebot_isaaclab/: setup.py
reBot-IsaacLab/source/rebot_isaaclab/config/: extension.toml
reBot-IsaacLab/source/rebot_isaaclab/rebot_isaaclab/: __init__.py  metrics.py  rgbd_actor_critic.py  rgbd_env_wrapper.py
reBot-IsaacLab/source/rebot_isaaclab/rebot_isaaclab/assets/: __init__.py  rebot_dm.py
reBot-IsaacLab/source/rebot_isaaclab/rebot_isaaclab/tasks/: __init__.py
reBot-IsaacLab/source/rebot_isaaclab/rebot_isaaclab/tasks/banana_lift/: __init__.py  banana_lift_env_cfg.py  banana_lift_vision_env_cfg.py
reBot-IsaacLab/source/rebot_isaaclab/rebot_isaaclab/tasks/banana_lift/agents/: __init__.py  rsl_rl_rgbd_ppo_cfg.py
reBot-IsaacLab/source/rebot_isaaclab/rebot_isaaclab/tasks/banana_lift/mdp/: __init__.py  events.py  observations.py  rewards.py
reBot-IsaacLab/tests/: test_metrics.py  test_rgbd_actor_critic.py  test_teacher_grasp_return.py
reBot-Isaacsim/: .gitignore  README.md  README_EN.md  pyproject.toml
reBot-Isaacsim/assets/banana/: README.md  bananas_1k.usdc
reBot-Isaacsim/assets/banana/textures/: bananas_nor_gl_1k.exr  bananas_rough_1k.exr
reBot-Isaacsim/config/: dm_sim.yaml
reBot-Isaacsim/docs/: GUI_FROM_EMPTY_WORLD.md
reBot-Isaacsim/reBotArm_Isaacsim/: SIM2REAL_GRASP.md  build_dm_asset.py  build_dm_asset.sh  gravity_joint_sender.py  isaacsim_joint_receiver.py  isaacsim_joint_test_sender.py  isaacsim_rgbd_exporter.py  live_sync.py  real_grasp_executor.py  run_isaacsim_receiver.sh  run_real_grasp.sh  run_sender.sh  run_sim2real_perception.sh  run_sim_grasp.sh  run_sim_rgbd.sh  run_test_sender.sh  sim2real_perception.py
rebot_grasp/: .gitignore  README.md  README_zh.md  environment.yml
rebot_grasp/calibration/: aruco_pose.py  hand_eye.py
rebot_grasp/config/: default.yaml
rebot_grasp/drivers/camera/: __init__.py  base.py  orbbec_dabai_dcw.py  orbbec_gemini2.py  realsense.py
rebot_grasp/drivers/robot/: __init__.py  grasp_driver.py
rebot_grasp/scripts/: analyze_handeye_npz.py  cartesian_damping_control.py  check_aruco_static.py  check_camera_base_point.py  collect_handeye_eih.py  grasp.py  graspnet_camera_demo.py  home_disable.py  main.py  move_pose_error_test.py  move_ros2_ready_pose.py  object_detection.py  ordinary_grasp_pipeline.py  run_check_aruco_static.sh  run_check_camera_base_point.sh  run_collect_handeye_eih.sh  run_graspnet_camera_demo.sh  run_home_disable.sh  run_main.sh  run_move_pose_error_test.sh
rebot_grasp/utils/: __init__.py  camera_utils.py  common_utils.py  graspnet_utils.py  ordinary_grasp.py  sam_utils.py  transforms.py  yolo_utils.py
rebotarm_ros2/: .gitignore  AGENTS.md  API_zh.md  CLAUDE.md  README_zh.md
rebotarm_ros2/docs/: agent_lessons.md  moveit_interfaces_note.md  pick_place_design.md
rebotarm_ros2/src/OrbbecSDK_ROS2/orbbec_camera/: CMakeLists.txt  package.xml
rebotarm_ros2/src/rebotarm_bringup/: package.xml  setup.py
rebotarm_ros2/src/rebotarm_gazebo/: .setup_assistant  CAMERA_GRASP_DESIGN.md  README.md  package.xml  setup.cfg  setup.py
rebotarm_ros2/src/rebotarm_gazebo11/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
rebotarm_ros2/src/rebotarm_gazebo11/config/: gazebo_controllers.yaml  reBot_B601_DM_with_gripper_gazebo.urdf  rebotarm.ros2_control.xacro  rebotarm.srdf  rebotarm.urdf.xacro  rebotarm_gazebo.urdf.xacro
rebotarm_ros2/src/rebotarm_gazebo11/launch/: gazebo.launch.py  moveit_launch_common.py  moveit_pick_place.launch.py  rebotarm.launch.py  simple_pick_place.launch.py
rebotarm_ros2/src/rebotarm_gazebo11/plugins/gazebo_grasp_plugin/src/: GazeboGraspFix.cpp
rebotarm_ros2/src/rebotarm_gazebo11/rviz/: gazebo_moveit.rviz
rebotarm_ros2/src/rebotarm_gazebo11/scripts/: gazebo_robot_description  gripper_slider_gui  joint_state_mirror  moveit_pick_place  planning_scene_objects  simple_pick_place  trajectory_relay
rebotarm_ros2/src/rebotarm_gazebo11/src/: cube_spawner.py  gazebo_robot_description.py  joint_state_mirror.py  moveit_pick_place.py  simple_pick_place.py  trajectory_relay.py
rebotarm_ros2/src/rebotarm_gazebo11/worlds/: arm_on_the_table.sdf
rebotarm_ros2/src/rebotarm_gazebo11/worlds/table/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
rebotarm_ros2/src/rebotarm_moveit_config/: CMakeLists.txt
rebotarm_ros2/src/rebotarm_moveit_config/config/: moveit_hardware_controllers.yaml  rebotarm.srdf  rebotarm.urdf.xacro
rebotarm_ros2/src/rebotarm_moveit_config/launch/: demo.launch.py  hardware.launch.py
rebotarm_ros2/src/rebotarm_moveit_demos/: setup.py
rebotarm_ros2/src/rebotarm_mujoco/: README.md  package.xml  setup.cfg  setup.py
rebotarm_ros2/src/rebotarm_mujoco/config/: mujoco_params.yaml  rebotarm.srdf  rebotarm.urdf.xacro
rebotarm_ros2/src/rebotarm_mujoco/launch/: moveit_launch_common.py  mujoco.launch.py
rebotarm_ros2/src/rebotarm_mujoco/models/: rebotarm_dm.xml
rebotarm_ros2/src/rebotarm_mujoco/models/rebot_gripper_assets/: reBot-DevArm_gripper.xml
rebotarm_ros2/src/rebotarm_mujoco/rviz/: mujoco_moveit.rviz
rebotarm_ros2/src/rebotarm_mujoco/src/: __init__.py  moveit_launch_common.py  mujoco_sim_node.py
scripts/: update-urdf-viz-packages.sh
(+70 files in other folders)
